<resources>
    <string name="app_name">Hodophile</string>
    <string name="database_link">https://fcm-hodophile-default-rtdb.firebaseio.com/</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="log_in">Log In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="terms">By creating an account you agree to our
    Terms of Service and Privacy Policy</string>
    <string name="go_to_sign_up">New user? Create an account here.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <!-- Strings related to features -->
    <string name="title_activity_drawer">Drawer Activity</string>
    <string name="menu_home">My Trips</string>
    <string name="menu_accommodation">Accommodation</string>
    <string name="menu_food">Food</string>
    <string name="menu_attractions">Attractions</string>
    <string name="menu_map">Map</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_translate">Translator</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_checklist">Checklist</string>
    <string name="logout">Logout</string>
    <!-- Strings related to Calendar -->
    <string name="back"><![CDATA[←]]></string>
    <string name="forward"><![CDATA[→]]></string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="next_month">next_month</string>
    <string name="prev_month">prev_month</string>
    <string name="home_message">Click on a date to start planning now!</string>
    <!-- Strings related to itinerary -->
    <string name="add_itinerary_header">Add to itinerary</string>
    <string name="add">Add</string>
    <string name="start_time">Start Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="end_time">End Time</string>
    <string name="time">Time</string>
    <string name="edit_itinerary">EDIT ITINERARY</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_to_itinerary">ADD TO ITINERARY</string>
    <string name="event">Event</string>
    <string name="close">close</string>
    <!-- Strings related to details -->
    <string name="price_range">Price Range</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="website"><u>Official website</u></string>
    <string name="booking"><u>Book now</u></string>
    <string name="reviews">Reviews</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="type_review_here">Type review here</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <!-- Strings related to notes -->
    <string name="new_note">new note</string>
    <string name="title">Title</string>
    <string name="edit_title">Edit note title</string>
    <string name="save">save</string>
    <!-- Strings related to weather -->
    <string name="enter_city_name">City</string>
    <string name="change_city">Change City</string>
    <string name="confirm">Confirm</string>
    <!-- Strings related to checklist -->
    <string name="edit_task">edit Task</string>
    <string name="empty_task">Please enter a task</string>
    <string name="edit">Edit</string>
    <string name="add_task">Add to checklist</string>
    <string name="task">Task</string>
    <string name="empty_title">Please enter a title</string>
    <!-- Strings related to profile -->
    <string name="change_picture">Change Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reviews_written">Reviews Written</string>
    <string name="profile_picture">profile_picture</string>


</resources>