<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_to_itinerary"
        android:textColor="@color/text_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/accommodationPopupAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accommodationPopupEndDate"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/accommodationPopupClose"
        android:layout_width="52dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/light_blue"
        android:contentDescription="@android:string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="@color/blue" />

    <TextView
        android:id="@+id/accommodationPopupStart"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/start_time"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10.5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/accommodationPopupLocation"
        app:layout_constraintTop_toBottomOf="@+id/accommodationPopupLocation" />

    <TextView
        android:id="@+id/accommodationPopupStartDate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/start_date"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10.5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/accommodationPopupStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accommodationPopupLocation" />

    <TextView
        android:id="@+id/accommodationPopupEnd"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/end_time"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10.5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/accommodationPopupStart"
        app:layout_constraintTop_toBottomOf="@+id/accommodationPopupStart" />

    <TextView
        android:id="@+id/accommodationPopupEndDate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/end_date"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10.5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/accommodationPopupEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accommodationPopupStartDate" />

    <TextView
        android:id="@+id/accommodationPopupLocation"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/location"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10.5dp"
        android:textAlignment="textStart"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>